# projectDiscrete

Project1_Starter_Code/: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomata.cpp  CommentAutomata.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Facts.cpp  Facts.h  FactsAutomaton.cpp  FactsAutomaton.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Left_ParenAutomaton.cpp  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  NewHeader.cpp  NewHeader.h  Parameter.cpp  Parameter.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  Q_MarkAutomaton.cpp  Q_MarkAutomaton.h  QueriesAutomaton.cpp  (+21 more)
Project1_Starter_Code/Lab4PassOffCases/4-80/: input7.txt
Project1_Starter_Code/lab1.dSYM/Contents/Resources/DWARF/: lab1
Project1_Starter_Code/testCases/: inputText2.txt  inputText4.txt  inputText5.txt  inputTextString.txt  inputTextcomment.txt  inputTextnewLine.txt
Project1_Starter_Code/testCases2/: in21.txt
